--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -7,6 +7,6 @@
     <h2>Terms of Service</h2>
     <p>Please do not use this application. This is for personal use only.</p>
     <p>User is fully responsible for actions of the application</p>
-    <p>App developer revokes all responsibilty for the damages that this app might do.</p>
+    <p>App developer do not take responsibility for the damages that this app might do.</p>
 </body>
 </html>
